# hackweek-terraform-registry-server

./: .envrc  .gitignore  .sqllsrc.json  Brewfile  Cargo.toml  Makefile  README.md  configuration.yaml
migrations/: 20230822221304_create_table.sql  20230822232233_namespace_unique.sql
src/: configuration.rs  lib.rs  main.rs  models.rs  state.rs
src/handlers/: download.rs  healthz.rs  mod.rs  module_registry.rs  service_discovery.rs
tests/: describe_service_discovery.rs  healthz.rs  main.rs  service_discovery.rs
tests/integration/: .terraformrc  Makefile  expected.json  integration_test.tf  test
tests/mock_modules/: Makefile
tests/mock_modules/lib/: mk_modules.sh
tests/mock_modules/module-namespace-a/module-name-x/: 1.0.10.tar.xz  1.0.11.tar.xz  3.1.10.tar.xz
tests/mock_modules/module-namespace-a/module-name-y/: 3.0.7.tar.xz  3.0.8.tar.xz  4.1.7.tar.xz
tests/mock_modules/module-namespace-a/module-name-z/: 1.1.4.tar.xz  5.0.4.tar.xz  5.0.5.tar.xz
tests/mock_modules/module-namespace-b/module-name-x/: 2.0.1.tar.xz  2.0.2.tar.xz  2.1.1.tar.xz
tests/mock_modules/module-namespace-b/module-name-y/: 2.0.11.tar.xz  2.0.12.tar.xz  4.1.11.tar.xz
tests/mock_modules/module-namespace-b/module-name-z/: 1.1.8.tar.xz  4.0.8.tar.xz  4.0.9.tar.xz
tests/mock_modules/module-namespace-c/module-name-x/: 1.0.5.tar.xz  1.0.6.tar.xz  2.1.5.tar.xz
tests/mock_modules/module-namespace-c/module-name-y/: 3.0.2.tar.xz  3.0.3.tar.xz  3.1.2.tar.xz
tests/mock_modules/module-namespace-c/module-name-z/: 1.1.12.tar.xz  3.0.12.tar.xz  3.0.13.tar.xz
tests/testsuite/: describe_module_registry.rs  describe_service_discovery.rs  healthz.rs  helpers.rs  main.rs
tls/: .gitignore  haproxy.cfg
(+162 files in other folders)
