[package]
name = "terraform-registry-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
poem = { version = "1.3.57", features = ["eyre06", "rustls", "test", "static-files", "anyhow"] }
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }


[dev-dependencies]
pretty_assertions = "1.4.0"
proptest = "1.2.0"
